<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Splash</string>

    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="add_wallet_intro_create">Create a new account</string>
    <string name="add_wallet_intro_import">Import mnemonics</string>
    <string name="add_wallet_create_title">Mnemonic phrases</string>

    <string name="setting_account">Accounts</string>
    <string name="setting_use_app_password">User App Password</string>
    <string name="setting_network">Network</string>

    <string name="account_name">Account name</string>
    <string name="mnemonic_phrases">Mnemonic phrases</string>
    <string name="seed_phrase">Seed phrase</string>
    <string name="wallet_create_description">This phrase is the only way to recover your account. Do not share with anyone. Losing this mnemonics could lead to loss of your asset.</string>
    <string name="copy">Copy</string>
    <string name="setting">SETTING</string>
    <string name="activity">ACTIVITY</string>
    <string name="app">APP</string>
    <string name="nft">NFT</string>
    <string name="nfts">NFTs</string>
    <string name="coins">COINS</string>
    <string name="coins2">Coins</string>
    <string name="balance">Balance</string>
    <string name="scan">Scan</string>
    <string name="faucet">Faucet</string>
    <string name="receive">Receive</string>
    <string name="account">Account</string>
    <string name="create_account">Add account</string>
    <string name="setting2">Setting</string>
    <string name="share_address">Share Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="address">Address</string>
    <string name="qr_code">QR Code</string>
    <string name="cap_nft">NFT</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_dapps">dApps</string>
    <string name="title_activity">Activity</string>
    <string name="select_account">Select account</string>
    <string name="rename_account">Rename account</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account">Delete account</string>
    <string name="delete">Delete</string>
    <string name="delete_warning">Are you sure you would like to delete this wallet?Make sure you have backup of your wallet\'s mnemonic phrase if you want to restore it later.</string>
    <string name="token_available">Available balance</string>
    <string name="amount">Amount</string>
    <string name="recipient_address">Recipient address</string>
    <string name="object_id">Object id</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="nft_send">NFT Send</string>
    <string name="gas_fee">Gas fee</string>
    <string name="assets">Assets</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="memo">Memo</string>
    <string name="unlock">Unlock</string>
    <string name="current_account_delete_error">Can\'t delete current wallet</string>
    <string name="nft_detail">NFT Detail</string>
    <string name="rename_empty">Empty name !</string>
    <string name="enter_a_pin_number">Enter a pin number</string>
    <string name="register_a_pin_number">Register a pin number</string>
    <string name="confirm_a_pin_number">Confirm a pin number</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="no_nfts">No NFTs</string>
    <string name="no_activity">No activity</string>
    <string name="no_dapps">No dApps</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="transaction_fail">Transaction Fail</string>
    <string name="view_in_explorer">View in explorer</string>
    <string name="view_mnemonics">View mnemonics</string>
    <string name="view_private_key">View private key</string>
    <string name="rename">Rename</string>
    <string name="wallet_connect">Wallet Connect</string>
    <string name="sign">Sign</string>
    <string name="method">Method</string>
    <string name="cancel">Cancel</string>
    <string name="detail">Detail</string>
    <string name="import_privatekey_description">Restore an account with your private key</string>
    <string name="import_private_key">Import Private Key</string>
    <string name="import_mnemonic_description">Restore an account with your mnemonics</string>
    <string name="import_mnemonics">Import Mnemonics</string>
    <string name="create_mnemonic_description">Create an account with a set of mnemonics</string>
    <string name="private_key">Private Key</string>
    <string name="staking">Staking</string>
    <string name="staking_title">SUI Staking</string>
    <string name="staking_objects_title">Staking Object List</string>
    <string name="stake_now">Stake now</string>
    <string name="notice">Notice</string>
    <string name="notice_msg">Cosmostation Wallet is a non-custodial wallet that’s fully compatible with Splash Wallet and supports Sui, Ethereum, Cosmos, and many more networks   all in one app.\n\nSwitch to Cosmostation Wallet for broader network support, enhanced features, and a better user experience!</string>
</resources>