<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp">

    <View
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/drawable_bottom_sheet_handle" />

    <TextView
        style="@style/BottomSheetTitle"
        android:layout_marginTop="16dp"
        android:text="@string/sign" />

    <TextView
        style="@style/TextViewH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/method"
        android:textColor="@color/color_mode_base04" />


    <TextView
        android:id="@+id/method"
        style="@style/TextViewH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_mode_base05"
        tools:text="sui_executeMove" />


    <TextView
        style="@style/TextViewH6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/detail"
        android:textColor="@color/color_mode_base04" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/message"
            style="@style/TextViewH6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/drawable_edittext_background"
            android:enabled="false"
            android:padding="20dp"
            android:textColor="@color/color_mode_base05"
            tools:text="asdadf\n\nsfa\nasdfad\naasdfsafan\n" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/FlatButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm_btn"
            style="@style/FlatButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>