<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/drawable_bottom_sheet_handle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewH3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:textColor="@color/color_mode_base05" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/color_mode_base03" />

    <LinearLayout
        android:id="@+id/create_mnemonic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            style="@style/TextViewH5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/add_wallet_intro_create"
            android:textColor="@color/color_mode_base05" />

        <TextView
            style="@style/TextViewH6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/create_mnemonic_description"
            android:textColor="@color/color_mode_base04" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_mode_base03" />

    <LinearLayout
        android:id="@+id/import_mnemonic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            style="@style/TextViewH5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/import_mnemonics"
            android:textColor="@color/color_mode_base05" />

        <TextView
            style="@style/TextViewH6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/import_mnemonic_description"
            android:textColor="@color/color_mode_base04" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_mode_base03" />

    <LinearLayout
        android:id="@+id/import_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:visibility="gone">

        <TextView
            style="@style/TextViewH5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/import_private_key"
            android:textColor="@color/color_mode_base05" />

        <TextView
            style="@style/TextViewH6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/import_privatekey_description"
            android:textColor="@color/color_mode_base04" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/color_mode_base03"
        android:visibility="gone" />
</LinearLayout>