<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/TextViewH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/transaction_result"
        android:textColor="@color/color_mode_base05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/result_text"
        style="@style/TextViewH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction_success"
        android:textColor="@color/color_green01"
        app:layout_constraintBottom_toBottomOf="@id/confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:src="@drawable/transaction_success_light"
        app:layout_constraintBottom_toTopOf="@id/result_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/explorer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/drawable_copy_button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="3dp"
        android:paddingStart="4dp"
        android:paddingEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/explorer_light"
            app:tint="@color/color_mode_base05" />

        <TextView
            style="@style/TextViewH6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_in_explorer"
            android:textColor="@color/color_mode_base05"
            app:layout_constraintBottom_toBottomOf="@id/confirm_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm_btn"
        style="@style/FlatButton"
        android:layout_marginBottom="16dp"
        android:background="@drawable/drawable_button_background"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>