<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/address_label"
        style="@style/TextViewLabel"
        android:layout_marginTop="30dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/address_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/drawable_edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_label">

        <TextView
            android:id="@+id/address"
            style="@style/TextViewH6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:padding="16dp"
            android:textColor="@color/color_mode_base05"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/address_copy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0x0000" />

        <ImageButton
            android:id="@+id/address_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:background="@android:color/transparent"
            android:padding="4dp"
            android:src="@drawable/copy_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_mode_base05" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/qr_label"
        style="@style/TextViewLabel"
        android:layout_marginTop="40dp"
        android:text="@string/qr_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_wrap" />

    <ImageView
        android:id="@+id/qrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:background="@drawable/drawable_edittext_background"
        android:padding="42dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qr_label" />

    <Button
        android:id="@+id/share_btn"
        style="@style/FlatButton"
        android:layout_marginBottom="16dp"
        android:background="@drawable/drawable_button_background"
        android:text="@string/share_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>